table alignment fixes

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -20,7 +20,7 @@
     width: 100%;
     max-width: 1200px;
     margin: auto;
-    padding: 20px;
+    padding: 20px 0px;
 }
 
 .custom-textbox .MuiOutlinedInput-root {
